hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__array_homogenous_types.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Ok(
    Hir {
        identifiers: [
            IdentId(0) => "<root>",
            IdentId(1) => "f",
            IdentId(2) => "a",
            IdentId(3) => "core",
            IdentId(4) => "add",
            IdentId(5) => "boolean",
            IdentId(6) => "div",
            IdentId(7) => "eq",
            IdentId(8) => "ge",
            IdentId(9) => "gt",
            IdentId(10) => "le",
            IdentId(11) => "lt",
            IdentId(12) => "mul",
            IdentId(13) => "neg",
            IdentId(14) => "neq",
            IdentId(15) => "number",
            IdentId(16) => "sub",
            IdentId(17) => "void",
        ],
        identifier_refs: [],
        expressions: [
            ExprId(0) => Expression {
                id: ExprId(0),
                kind: Literal(
                    Literal {
                        kind: Number(0),
                        span: 3:22; [40, 41],
                    },
                ),
                span: 3:22; [40, 41],
                type_id: TypeId(4),
            },
            ExprId(1) => Expression {
                id: ExprId(1),
                kind: Literal(
                    Literal {
                        kind: Number(1),
                        span: 3:25; [43, 44],
                    },
                ),
                span: 3:25; [43, 44],
                type_id: TypeId(4),
            },
            ExprId(2) => Expression {
                id: ExprId(2),
                kind: ArrayInstantiation(
                    [
                        ExprId(0),
                        ExprId(1),
                    ],
                ),
                span: 3:21; [39, 45],
                type_id: TypeId(10),
            },
            ExprId(3) => Expression {
                id: ExprId(3),
                kind: Block(
                    [
                        StmtId(1),
                        StmtId(4),
                    ],
                ),
                span: 2:17; [17, 56],
                type_id: TypeId(2),
            },
        ],
        statements: [
            StmtId(0) => Statement {
                id: StmtId(0),
                kind: Namespace(
                    Identifier {
                        id: IdentId(0),
                        span: 0:0; [0, 0],
                        symbol_id: SymbolId(1),
                    },
                    InputId(0),
                    [
                        StmtId(2),
                        StmtId(3),
                    ],
                ),
                span: 0:0; [0, 0],
            },
            StmtId(1) => Statement {
                id: StmtId(1),
                kind: Let(
                    Identifier {
                        id: IdentId(2),
                        span: 3:17; [35, 36],
                        symbol_id: SymbolId(20),
                    },
                    ExprId(2),
                ),
                span: 3:13; [31, 46],
            },
            StmtId(2) => Statement {
                id: StmtId(2),
                kind: LetFn(
                    Identifier {
                        id: IdentId(1),
                        span: 2:13; [13, 14],
                        symbol_id: SymbolId(19),
                    },
                    [],
                    [],
                    Return {
                        type_def_id: None,
                        typed_id: TypeId(1),
                    },
                    Provided(
                        ExprId(3),
                    ),
                    None,
                ),
                span: 2:9; [9, 56],
            },
            StmtId(3) => Statement {
                id: StmtId(3),
                kind: Namespace(
                    Identifier {
                        id: IdentId(3),
                        span: 6:11; [76, 80],
                        symbol_id: SymbolId(2),
                    },
                    InputId(0),
                    [],
                ),
                span: 6:17; [82, 83],
            },
            StmtId(4) => Statement {
                id: StmtId(4),
                kind: Ret(
                    None,
                    Implicit,
                ),
                span: 0:0; [0, 0],
            },
        ],
        type_defs: [],
        root: StmtId(0),
        symbols: [
            SymbolId(0) => Symbol {
                id: SymbolId(0),
                kind: NotFound,
                type_id: TypeId(0),
            },
            SymbolId(1) => Symbol {
                id: SymbolId(1),
                kind: Namespace(
                    IdentId(0),
                    {
                        IdentId(1): [
                            SymbolId(19),
                        ],
                        IdentId(3): [
                            SymbolId(2),
                        ],
                    },
                ),
                type_id: TypeId(1),
            },
            SymbolId(2) => Symbol {
                id: SymbolId(2),
                kind: Namespace(
                    IdentId(3),
                    {
                        IdentId(4): [
                            SymbolId(18),
                        ],
                        IdentId(5): [
                            SymbolId(5),
                        ],
                        IdentId(6): [
                            SymbolId(17),
                        ],
                        IdentId(7): [
                            SymbolId(15),
                            SymbolId(16),
                        ],
                        IdentId(8): [
                            SymbolId(14),
                        ],
                        IdentId(9): [
                            SymbolId(13),
                        ],
                        IdentId(10): [
                            SymbolId(12),
                        ],
                        IdentId(11): [
                            SymbolId(11),
                        ],
                        IdentId(12): [
                            SymbolId(10),
                        ],
                        IdentId(13): [
                            SymbolId(9),
                        ],
                        IdentId(14): [
                            SymbolId(7),
                            SymbolId(8),
                        ],
                        IdentId(15): [
                            SymbolId(4),
                        ],
                        IdentId(16): [
                            SymbolId(6),
                        ],
                        IdentId(17): [
                            SymbolId(3),
                        ],
                    },
                ),
                type_id: TypeId(1),
            },
            SymbolId(3) => Symbol {
                id: SymbolId(3),
                kind: NativeType(
                    IdentId(17),
                    Void,
                ),
                type_id: TypeId(2),
            },
            SymbolId(4) => Symbol {
                id: SymbolId(4),
                kind: NativeType(
                    IdentId(15),
                    Number,
                ),
                type_id: TypeId(2),
            },
            SymbolId(5) => Symbol {
                id: SymbolId(5),
                kind: NativeType(
                    IdentId(5),
                    Boolean,
                ),
                type_id: TypeId(2),
            },
            SymbolId(6) => Symbol {
                id: SymbolId(6),
                kind: Native(
                    IdentId(16),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    SubNumberNumber,
                ),
                type_id: TypeId(5),
            },
            SymbolId(7) => Symbol {
                id: SymbolId(7),
                kind: Native(
                    IdentId(14),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    NeqNumberNumber,
                ),
                type_id: TypeId(6),
            },
            SymbolId(8) => Symbol {
                id: SymbolId(8),
                kind: Native(
                    IdentId(14),
                    [
                        TypeId(3),
                        TypeId(3),
                    ],
                    TypeId(3),
                    NeqBooleanBoolean,
                ),
                type_id: TypeId(7),
            },
            SymbolId(9) => Symbol {
                id: SymbolId(9),
                kind: Native(
                    IdentId(13),
                    [
                        TypeId(4),
                    ],
                    TypeId(4),
                    NegNumber,
                ),
                type_id: TypeId(8),
            },
            SymbolId(10) => Symbol {
                id: SymbolId(10),
                kind: Native(
                    IdentId(12),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    MulNumberNumber,
                ),
                type_id: TypeId(5),
            },
            SymbolId(11) => Symbol {
                id: SymbolId(11),
                kind: Native(
                    IdentId(11),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    LtNumberNumber,
                ),
                type_id: TypeId(6),
            },
            SymbolId(12) => Symbol {
                id: SymbolId(12),
                kind: Native(
                    IdentId(10),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    LeNumberNumber,
                ),
                type_id: TypeId(6),
            },
            SymbolId(13) => Symbol {
                id: SymbolId(13),
                kind: Native(
                    IdentId(9),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    GtNumberNumber,
                ),
                type_id: TypeId(6),
            },
            SymbolId(14) => Symbol {
                id: SymbolId(14),
                kind: Native(
                    IdentId(8),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    GeNumberNumber,
                ),
                type_id: TypeId(6),
            },
            SymbolId(15) => Symbol {
                id: SymbolId(15),
                kind: Native(
                    IdentId(7),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    EqNumberNumber,
                ),
                type_id: TypeId(6),
            },
            SymbolId(16) => Symbol {
                id: SymbolId(16),
                kind: Native(
                    IdentId(7),
                    [
                        TypeId(3),
                        TypeId(3),
                    ],
                    TypeId(3),
                    EqBooleanBoolean,
                ),
                type_id: TypeId(7),
            },
            SymbolId(17) => Symbol {
                id: SymbolId(17),
                kind: Native(
                    IdentId(6),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    DivNumberNumber,
                ),
                type_id: TypeId(5),
            },
            SymbolId(18) => Symbol {
                id: SymbolId(18),
                kind: Native(
                    IdentId(4),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    AddNumberNumber,
                ),
                type_id: TypeId(5),
            },
            SymbolId(19) => Symbol {
                id: SymbolId(19),
                kind: LetFn(
                    IdentId(1),
                    StmtId(2),
                    [],
                    TypeId(1),
                ),
                type_id: TypeId(9),
            },
            SymbolId(20) => Symbol {
                id: SymbolId(20),
                kind: Let(
                    IdentId(2),
                    StmtId(1),
                ),
                type_id: TypeId(10),
            },
        ],
        types: [
            TypeId(0) => Invalid,
            TypeId(1) => Void,
            TypeId(2) => None,
            TypeId(3) => Boolean,
            TypeId(4) => Number,
            TypeId(5) => Function(
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(4),
            ),
            TypeId(6) => Function(
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(3),
            ),
            TypeId(7) => Function(
                [
                    TypeId(3),
                    TypeId(3),
                ],
                TypeId(3),
            ),
            TypeId(8) => Function(
                [
                    TypeId(4),
                ],
                TypeId(4),
            ),
            TypeId(9) => Function(
                [],
                TypeId(1),
            ),
            TypeId(10) => Array(
                TypeId(4),
                2,
            ),
        ],
        exit_points: ExitPoints {
            exit_points: {
                ExprId(3): [
                    Implicit(
                        None,
                    ),
                ],
            },
            unreachable: [],
        },
    },
)
